<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/primaryDarkColor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_margin="50dp"
        app:cardCornerRadius="8dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/primaryDarkColor"
        style="@style/Widget.Material3.CardView.Elevated">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/secondaryLightColor">
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_trophy"
                android:scaleType="fitCenter"
                android:contentDescription="@string/image" />
            <TextView
                android:id="@+id/tv_congratulate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/congratulations" />
            <TextView
                android:id="@+id/tv_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                android:textSize="20sp"
                android:text="@string/you_ve_successfully_completed_all_the_exercises" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btn_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/restart"
        android:textSize="20sp"/>

</LinearLayout>