<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:strokeWidth="1dp"
    app:strokeColor="@color/teal_700"
    style="@style/Widget.Material3.CardView.Elevated"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/black"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_are_you_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:background="@color/black"
            android:text="@string/are_you_sure"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/light_grey"
            android:background="@color/light_grey"/>
        <TextView
            android:id="@+id/tv_back_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:background="@color/black"
            android:text="@string/quit_later"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_margin="8dp"
                android:layout_height="48dp"
                android:textColor="@color/white"
                android:text="@string/yes"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn_no"
                android:padding="8dp"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_margin="8dp"
                android:layout_height="48dp"
                android:text="@string/no"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>