<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/dark_black_bg">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/welcome_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/primaryColor"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ImageView
        android:id="@+id/image_view_quote"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="@dimen/primary_padding"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_toolbar"
        android:src="@drawable/body"
        />
    <FrameLayout
        android:id="@+id/frame_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_quote"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp">
        <TextView
            android:id="@+id/tv_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:text="@string/start"
            android:textColor="@color/white"
            android:background="@drawable/ripple_background_effect"/>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_bmi"
        android:layout_width="80dp"
        app:layout_constraintTop_toBottomOf="@id/frame_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/bmi"
        android:layout_marginTop="80dp"
        android:background="@drawable/completed_exercise_bg"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/tv_calculate"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/calculator"
        app:layout_constraintTop_toBottomOf="@id/tv_bmi"
        />

</androidx.constraintlayout.widget.ConstraintLayout>