<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity"
    android:background="@drawable/dark_black_bg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/exercise_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ImageView
        android:id="@+id/ImageView30"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:visibility="invisible"
        android:src="@drawable/image_fitness"
        app:layout_constraintTop_toBottomOf="@id/exercise_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/exercise_image"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/get_ready"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tv_exerciseName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/primary_padding"/>

    <TextView
        android:id="@+id/tv_exerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/exercise_name_bg"
        android:text=""
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/frame_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/primary_padding"/>

    <TextView
        android:id="@+id/tv_title30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="@dimen/text_size"
        android:text="@string/get_ready"
        android:textColor="@color/white"
        android:gravity="center"
        android:visibility="invisible"
        android:layout_margin="20dp"
        android:background="@drawable/exercise_name_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ImageView30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/frame_layout_30" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:max="10"
            android:progress="100"
            android:rotation="-90"
            android:indeterminate="false"
            android:background="@drawable/circular_progress_bar_gray"
            android:progressDrawable="@drawable/circular_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"/>
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/item_circular_color_accent">
            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:text="@string/ten"
                android:textStyle="bold"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_layout_30"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title30">
        <ProgressBar
            android:id="@+id/progress_bar_30"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:max="30"
            android:progress="100"
            android:rotation="-90"
            android:indeterminate="false"
            android:background="@drawable/circular_progress_bar_gray"
            android:progressDrawable="@drawable/circular_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"/>
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/item_circular_color_accent">
            <TextView
                android:id="@+id/tv_timer_30"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:text="@string/thirty"
                android:textStyle="bold"/>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>